--- a/src/components/Slide.css
+++ b/src/components/Slide.css
@@ -21,7 +21,7 @@
 .slide-image {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .image-overlay {
@@ -39,7 +39,7 @@
 
 .slide-content {
   position: absolute;
-  top: 50%;
+  top: 70%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
